--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github_username: your-github-username
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
 
 plugins:
   - jekyll-feed
